--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
           </button>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">¿Por qué Quiet?</a></li>
-          <li><a href="#">Recursos</a></li>
+          <li><a href="recursos.html">Recursos</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
         <!-- Botón para iniciar sesión -->
