--- a/login-in.html
+++ b/login-in.html
@@ -21,7 +21,7 @@
         <section class="Inscripcion-Section">
           <form action="user-interface.html" method="get">
             <div class="form-group">
-              <label>Nombre de Usuario o Gmail</label
+              <label>Ingresa tu correo</label
               ><input type="text" name="femail" size="30" />
             </div>
             <div class="form-group">
@@ -63,5 +63,6 @@
       </div>
     </main>
   </body>
+  <div class="switch-button">
   <script src="login-validation.js"></script>
 </html>
