--- a/sign-up.html
+++ b/sign-up.html
@@ -65,5 +65,17 @@
         </p>
       </div>
     </main>
+    <div class="switch-button">
+      <!-- Checkbox -->
+      <input
+        type="checkbox"
+        name="switch-button"
+        id="switch-label"
+        class="switch-button__checkbox"
+      />
+      <!-- Botón -->
+      <label for="switch-label" class="switch-button__label"></label>
+    </div>
+    <script src="oscuro.js"></script>
   </body>
 </html>
