--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
   </head>
   <body class="about-page">
     <!-- Encabezado con barra de navegación -->
+        <!-- Encabezado con barra de navegación -->
     <header>
       <nav>
         <!-- Logo -->
@@ -30,7 +31,9 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">¿Por qué Quiet?</a></li>
           <li><a href="recursos.html">Recursos</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="comunidad.html">Comunidad</a></li>
+          <li><a href="consejos.html">Consejos</a></li>
         </ul>
         <!-- Botón para iniciar sesión -->
         <a href="login-in.html" class="download-button">Iniciar sesión</a>
@@ -48,11 +51,7 @@
         />
         <div class="about-container">
           <!-- Imagen ilustrativa -->
-          <img
-            src="images/about-us.png"
-            alt="Grupo de personas"
-            class="about-image"
-          />
+
           <div class="about-text">
             <p>
               Quiet ofrece una solución práctica y accesible. Esta aplicación
@@ -66,6 +65,28 @@
       </div>
     </section>
 
+    <div class="social-icons">
+      <a
+        href="https://www.facebook.com/people/Quiett/61568944021904/"
+        target="_blank"
+        class="social-icon"
+      >
+        <img src="images/fb.png" alt="Facebook" />
+      </a>
+      <a href="https://twitter.com" target="_blank" class="social-icon">
+        <img src="images/x.png" alt="Twitter" />
+      </a>
+      <a href="https://www.instagram.com/quietoficial/?hl=es target="_blank" class="social-icon">
+        <img src="images/inta.png" alt="Instagram" />
+      </a>
+      <a href="https://linkedin.com" target="_blank" class="social-icon">
+        <img src="images/link.png" alt="LinkedIn" />
+      </a>
+      <a href="https://www.youtube.com/@QuieOficial" target="_blank" class="social-icon">
+        <img src="images/yt.png" alt="YouTube" />
+      </a>
+    </div>
+
     <!-- Pie de página con enlaces adicionales -->
     <footer>
       <p>&copy; 2024 Quiet. Todos los derechos reservados.</p>
@@ -75,6 +96,18 @@
         <li><a href="#">Soporte</a></li>
       </ul>
     </footer>
+    <div class="switch-button">
+      <!-- Checkbox -->
+      <input
+        type="checkbox"
+        name="switch-button"
+        id="switch-label"
+        class="switch-button__checkbox"
+      />
+      <!-- Botón -->
+      <label for="switch-label" class="switch-button__label"></label>
+    </div>
     <script src="responsive.js"></script>
+    <script src="oscuro.js"></script>
   </body>
 </html>
